[PROJECT STATE] added more css and integrated flask-sqlalchemy, submitted project.

--- a/bin/templates/index.html
+++ b/bin/templates/index.html
@@ -6,8 +6,6 @@
 
 {% block content %}
     <div id="home_maincontent">
-        <h1>
-            WEBSITE HOMEPAGE
-        </h1>
+        HOSTEL MANAGEMENT ERP
     </div>
 {% endblock %}
