--- a/bin/static/style.css
+++ b/bin/static/style.css
@@ -3,9 +3,22 @@ body{
     margin: 0;
 }
 
-/* ------------------------------------------------------------------------------ */
+a:link {
+    text-decoration: none;
+}
+a:visited {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+a:active {
+    text-decoration: none;
+}
 
+/* ------------------------------------------------------------------------------ */
 /* We have fixed the canvas to take the entire space in the viewport */
+
 .canvas{
     /* flex container for the base html page for the website */
     display: flex;
@@ -36,7 +49,6 @@ body{
 }
 
 /* ------------------------------------------------------------------------------ */
-
 /* styles for the navbar for the website which remains the same */
 
 #navbar_left{
@@ -48,10 +60,122 @@ body{
     display: flex;
     flex-direction: row;
 
-    display: flex;
     flex: 1 1 auto;
+
+    /* 
+        these two properties can be used to center text inside a flex container
+        in both main and cross axis directions.
+    */
+    justify-content: center;
+    align-items: center;
 }
 
 #navbar_right > * {
+    display: flex;
     flex: 1 1 auto;
+    justify-content: center;
+    align-items: center;
 }
+
+/* ------------------------------------------------------------------------------ */
+/* Index page styles */
+#home_maincontent{
+    display: flex;
+    
+    position: inherit;
+    height: 100%;
+    width: 100%;
+
+    justify-content: center;
+    align-items: center;
+
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: xx-large;
+}
+
+
+/* ------------------------------------------------------------------------------ */
+/* signin form style => div is made a flex container */
+
+#signin_maincontent{
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    position: inherit;
+    height: 100%;
+    width: 100%;
+}
+
+#signin_form{
+    display: flex;
+    flex-direction: column;
+
+    position: inherit;
+    height: 60%;
+    width: 20%;
+}
+
+#signin_form > * {
+    display: flex;
+    flex-direction: flex;
+
+    flex: 1 1 auto;
+
+    justify-content: center;
+    align-items: center;
+}
+
+#signin_text{
+    font-size: x-large;
+}
+
+#user_type{
+    font-size: x-large;
+}
+
+/* ------------------------------------------------------------------------------ */
+/* signup form style => div is made a flex container */
+
+#signup_maincontent{
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    position: inherit;
+    height: 100%;
+    width: 100%;
+}
+
+#signup_form{
+    display: flex;
+    flex-direction: column;
+
+    position: inherit;
+    height: 80%;
+    width: 20%;
+}
+
+#signup_form > * {
+    display: flex;
+    flex-direction: flex;
+
+    flex: 1 1 auto;
+
+    justify-content: center;
+    align-items: center;
+}
+
+#signup_text{
+    font-size: x-large;
+}
+
+#user_type{
+    font-size: x-large;
+}
+
+
